logs/comm-libs.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/comm_libs'...
Compiling './lib/python3.5/site-packages/comm_libs/comm_utils.py'...
***   File "./lib/python3.5/site-packages/comm_libs/comm_utils.py", line 41
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/comm_libs/contract.py'...
***   File "./lib/python3.5/site-packages/comm_libs/contract.py", line 26
    print string
               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/comm_libs/regular_utils.py'...
***   File "./lib/python3.5/site-packages/comm_libs/regular_utils.py", line 9
    "user_name": ur'^[\u4E00-\u9FA5\uf900-\ufa2d\·]+$',
                                                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/comm_libs/rsa_utils.py'...
***   File "./lib/python3.5/site-packages/comm_libs/rsa_utils.py", line 27
    print len(tmp), tmp
            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/comm_libs/session.py'...
***   File "./lib/python3.5/site-packages/comm_libs/session.py", line 80
    print skey
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/comm_libs/time_utils.py'...
***   File "./lib/python3.5/site-packages/comm_libs/time_utils.py", line 152
    print get_now_date_str()
                         ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/comm_libs-1.1.3.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
